@@ -20,20 +20,31 @@
  * $Id$
  */
 ?>
-<input type="radio" name="setCaption" value="0" id="setCaption0"><label for="setCaption0"> <?php echo gTranslate('core', "Leave blank.") ?></label>
+<?php 
+
+if(!isset($setCaption) || (int)$setCaption > 3) {
+    $setCaption = 1;
+}
+
+?>
+<input type="radio" name="setCaption" value="0" id="setCaption0" <?php echo ($setCaption == 0) ? 'checked' : '' ?>>
+    <label for="setCaption0"><?php echo gTranslate('core', "Leave blank.") ?></label>
 <br>
-<input type="radio" name="setCaption" value="1" id="setCaption1" checked><label for="setCaption1"> <?php echo gTranslate('core', "Use filename as caption.") ?></label>
+<input type="radio" name="setCaption" value="1" id="setCaption1" <?php echo ($setCaption == 1) ? 'checked' : '' ?>>
+    <label for="setCaption1"><?php echo gTranslate('core', "Use filename as caption.") ?></label>
 <br>
-<input type="radio" name="setCaption" value="2" id="setCaption2"><label for="setCaption2"> <?php echo gTranslate('core', "Use file creation date/time stamp.") ?></label>
+<input type="radio" name="setCaption" value="2" id="setCaption2" <?php echo ($setCaption == 2) ? 'checked' : ''?>>
+    <label for="setCaption2"><?php echo gTranslate('core', "Use file creation date/time stamp.") ?></label>
 <br>
 <?php
 if (isset($gallery->app->use_exif)) {
-        echo '<input type="radio" name="setCaption" value="3" id="setCaption3">';
-	echo '<label for="setCaption3"> ';
-        echo gTranslate('core', "Set photo captions with file capture times.");
+    $checked = ($setCaption == 3) ? 'checked' : '';
+    echo '<input type="radio" name="setCaption" value="3" id="setCaption3" '. $checked .'>';
+	echo "\n<label for=\"setCaption3\">";
+    echo gTranslate('core', "Set photo captions with file capture times.");
 	echo '</label>';
 }
 
 echo "\n<br><br>";
-echo gTranslate('core', "For the last two options Gallery will use the format you specified in the config for date/time strings.");
+echo gTranslate('core', "For the date/time related options Gallery will use the format you specified in the config for date/time strings.");
 ?>
