@@ -1,3 +1,15 @@
+2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b13
+
+ * Fix: Choosing "blank" in recreate captions did nothing.
+   Thanks to Kai.
+
+ * Fix: Albumitem actions in thumbsview was broken in alpha3-svn-b9
+
+ * Fix: Use class=".." instead of align=".." in printPopupStart()
+	So its ready for rtl languages.
+
+ * Fix: Reorder on mainpage were broken in alpha2-svn-b24
+
 2006-11-10 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b12
 
  * Change: Tweaked readMoreBox()
